# mrsiprep

./: .dockerignore  .gitignore  CAT12_PORT_CONTEXT.md  CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile.bootstrap  Dockerfile.cpu-deps  Dockerfile.deps  LICENSE  README.md  SYNTHSEG_FAST_CONTEXT.md  mkdocs.yml  pyproject.toml
docker/: DOCKERHUB.md  README.md  build_bootstrap.sh  build_cpu_image.sh  build_private_deps.sh  check_neurodeps.sh  enter_manual_deps.sh  finalize_manual_deps.sh  install_neurodeps.sh  manual_install_fsl_freesurfer.sh  patch_chimera_milestones.py  private-neurodeps.env.example  prune_cpu_neurodeps.sh  publish_image.sh  test_container.sh  update_mrsiprep_image.sh
docs/: changelog.md  conf.py  index.md  inputs.md  installation.md  usage.md  usage_basic.md  usage_normalization.md  usage_parcellation.md
examples/: run_chimera_mode.sh  run_dummy_project_docker.sh  run_mni_mode.sh
mrsiprep/: __init__.py
mrsiprep/cli/: parser.py  run.py
mrsiprep/config/: defaults.py  settings.py
mrsiprep/connectivity/: __init__.py  connectivity.py  edges.py  export.py  matrix.py  nodes.py  similarity.py
mrsiprep/interfaces/: __init__.py  ants.py  bids_import.py  bids_import_gui.py  chimera.py  freesurfer.py  fsl.py  hdbet.py
mrsiprep/io/: bids.py  derivatives.py  loaders.py  naming.py  validators.py
mrsiprep/mrsi/: __init__.py  filtering.py  masks.py  (+4 more)
tests/: test_bids_inputs.py  test_cat12_amap_scaffold.py  test_cli.py  test_connectivity.py  test_derivative_names.py  test_processing_modes.py  test_pvc.py  test_qc_reports.py  test_synthseg_fast.py
(+65 files in other folders)
